--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,3 +12,21 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
 }
+
+// Headings
+h1, 
+h2, 
+h3 {
+    margin: 0;
+    font-weight: 400;
+
+    &.lg-heading {
+        font-size: 6rem;    
+    }
+
+    &.sm-heading {
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background: lighten($primary-color, 2)
+    }
+}
