--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,6 @@ h3 {
     &.sm-heading {
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
-        background: lighten($primary-color, 2)
+        background: rgba(lighten($primary-color, 2), 0.5);
     }
 }
