--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,3 +30,14 @@ h3 {
         background: rgba(lighten($primary-color, 2), 0.5);
     }
 }
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
