--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,9 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
+
+@mixin easeOut {
+    transition: all 0.5s ease-out;  
+}
 
 * {
     box-sizing: border-box;
@@ -40,4 +45,27 @@ header {
     position: fixed;
     z-index: 2;
     width: 100%;
+}
+
+.text-secondary {
+    color: $secondary-color;
+}
+
+main {
+    padding: 4rem;
+    height: 100%;
+
+    .icons {
+        margin-top: 1rem;
+
+        a {
+            padding: 0.4rem;
+
+            &:hover {
+                    color: $secondary-color;
+                    @include easeOut();
+                }
+
+        }
+    }
 }
