--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,4 +68,11 @@ main {
 
         }
     }
+
+    &#home {
+        overflow: hidden;
+        h1 {
+            margin-top: 20vh;
+        }
+    }
 }
