--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,19 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url();
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
 
 @mixin easeOut {
     transition: all 0.5s ease-out;  
+}
+
+@mixin background {
+    @if $show-home-image {
+        &#bg-img {
+            background: $home-image;
+        }
+    }
 }
 
 * {
@@ -12,6 +21,7 @@ $home-image: url();
 }
 
 body {
+    @include background;
     background: $primary-color;
     color: #fff;
     height: 100%;
