--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,5 +83,10 @@ main {
         }
     }
 
-
+    &#home {
+        overflow: hidden;
+        h1 {
+            margin-top: 20vh;
+        }
+    }
 }
