--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,12 @@ $background-opacity: 0.9;
             background: $home-image;
             background-attachment: fixed;
             background-size: cover;
+
+            .overlay {
+                position: absolute;
+                top: 0;
+                right: 0;
+            }
         }
     }
 }
