--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,8 @@ $background-opacity: 0.9;
                 position: absolute;
                 top: 0;
                 right: 0;
+                width: 100%;
+                height: 100%;
             }
         }
     }
