Rotate menu button

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -14,4 +14,9 @@
         background: #fff;
         @include easeOut;
     }
+
+    // Rotate into X with menu line
+    &.close {
+        transform: rotate(180deg);
+    }
 }
