--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -35,3 +35,13 @@
         }
     }
 }
+
+// Menu Overlay
+
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden;
+}
