--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -44,4 +44,21 @@
     width: 100%;
     opacity: 0.9;
     visibility: hidden;
+
+    &.show {
+        visibility: visible;
+    }
+
+    // This one is like .menu-branding and .menu-nav
+    &-branding,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100%;
+        overflow: hidden; 
+    }
 }
