--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -61,4 +61,10 @@
         height: 100%;
         overflow: hidden; 
     }
+
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color, 5);
+    }
 }
